# Android-particle-collision

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RendererES3.cpp  gles3jni.cpp  gles3jni.h  native-lib.cpp
app/src/main/cpp/include/: cal.h
app/src/main/cpp/include/state/: vulkanfunc.hpp
app/src/main/cpp/includes/state/: vulkanfunc.hpp
app/src/main/java/com/example/myapplication/: GLES3JNILib.kt  GLES3JNILibActivity.kt  GLES3JNIView.kt  MainActivity.kt  RendererJNI.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
